fixing spacing for portfolio items

--- a/src/components/FA/FA.css
+++ b/src/components/FA/FA.css
@@ -4,15 +4,10 @@
   font-size: 1.5em;
   user-select: none;    
  }
-.fab:hover{
+.light .fab:hover{
   color:rgb(214, 221, 219) !important;
   text-shadow: 0px 0px 3px #2D342D;
 }
-
-/* .fa-envelope,i.fa-envelope-open{
-  position: absolute;
-  font-size: 1.3em;
-  z-index: 2;
-  right: 65px;
-  top: 17px;
-} */
+.fab, .fas{
+  font-size: 1.1em;
+}
