--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,21 +1,28 @@
 .project{
-  margin: 35px 25px;
+  padding: 0px 25px;
+  margin-bottom: 0px;
+  height: 120px;
+  text-align: center;
+  font-size: 0.8em;
+  display:flow-root;
 }
 
-.img{
-  cursor: default;
-  max-width: 250px;
-  height: auto;
-  flex-wrap: nowrap;
-  flex-flow: row;
+.spacing{
+  margin: 100px 0px;
 }
-.img.activated{
+.small-space{
+  margin: 20px 10px;
+}
+
+.img .activated{
   max-width: 500px;
+  display:flow-root;
+
 }
 .project-img{
   object-fit: cover;
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
+  max-width: 100%;
   float:left;
   margin-left: 15px;
   box-shadow: 0px 0px 10px 2px #33333379;
@@ -23,16 +30,41 @@
 .mt{
   margin: 14px 25px;
 }
-.project .fab{
+.project .fas{
+  color: #555;
+}
+.project .fas:hover,.project .fab:hover{
+ color: #333;
+}
+
+.project .fab,
+.project .fas{
   /* float:left; */
   padding: 0px;
-  margin: 22px 10px;
+  margin: 22px 7px 22px 14px;
 }
+.project .media > img{
+  border-radius: 5px;
+}
+
 .media{
   width: 95px;
   height: 95px;
   flex-wrap: nowrap;
   flex-flow: row;
+}
+
+.img{
+  cursor: default;
+  max-width: 305px;
+  flex-wrap: nowrap;
+  flex-flow: row;
+}
+#named{
+  max-width: 80px;
+  text-align:center;
+  margin-left: 40px;
+  display:block;
 }
 .media a{
   float: right;
@@ -41,6 +73,7 @@
 }
 @media screen and (max-width:400px){
   .project-img{
-    max-height: 100px;
+    max-width: 90%;
+    height: 150px;
   }
 }
