--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -31,11 +31,13 @@ div.avatar > img{
 .flexy{
   display: inline-flex;
   flex-wrap: wrap;
-  justify-content: ,cf..fff./dddddddddd s                    csddde
 }
 .narrow{
-  margin: 0px 50px 0px 250px;
+  margin: 0px 0px 0px 250px;
   padding: 20px;
+}
+.flexy{
+  padding-bottom: 50px;
 }
 .narrow:not(:last-child){
   border-bottom: 1px solid #246EB9;
